# PCBEmulator

./: .gitignore  README.md
emulator/: CMakeLists.txt
emulator/include/: elf.hpp  log.hpp  risc.hpp  utils.hpp
emulator/include/board/: board.hpp  board_test.hpp  track.hpp
emulator/include/devices/: button.hpp  device.hpp  led.hpp  pin_header.hpp
emulator/include/devices/cpu/: cpu.hpp
emulator/include/devices/cpu/core/: address_space.hpp  core.hpp  instructions.hpp  io_pin.hpp  registers.hpp
emulator/include/devices/cpu/core/mmio/: device.hpp  gpio.hpp  memory.hpp  uart.hpp
emulator/include/ui/: window.hpp
emulator/include/ui/views/: view.hpp  view_control.hpp  view_pcb.hpp
emulator/source/: main.cpp
emulator/source/devices/cpu/core/: core.cpp
emulator/source/ui/: window.cpp
risc-example/: linker.ld  meson.build  riscv
risc-example/subprojects/kern/: meson.build
risc-example/subprojects/kern/include/: types.hpp
risc-example/subprojects/kern/source/: main.cpp
